2009-02-05  Josh Stone  <jistone@redhat.com>

	* staptree.h (update_visitor): A new visitor to make it easier to
	rewrite parts of a probe or function without making a full copy.
	* staptree.cxx (update_visitor::*): Each child is recursed with a
	require() call, and then the parent returns itself with provide().
	* staptree.h (deep_copy_visitor): Inherit from update_visitor to get
	the recursive descent while updating nodes.
	* staptree.cxx (deep_copy_visitor::*): Use the implicit copy
	constructors to copy all fields, then defer to update_visitor for the
	recursion.  Referents are still cleared from the copies of symbols and
	function calls.

2009-02-05  Josh Stone  <jistone@redhat.com>

	* staptree.h (require, provide): Simplify stack operations with less
	pointer magic, and move to be deep_copy_visitor members.
	* staptree.h (deep_copy_visitor::deep_copy): Templatize
	* staptree.cxx, tapsets.cxx: Refactor require/provide callers

2009-02-04  Mark Wielaard  <mjw@redhat.com>

	* NEWS: process().mark(), sys/sdt.h and dtrace compatibility script.

2009-02-04  Mark Wielaard  <mjw@redhat.com>

	* NEWS: Mention run-stap.

2009-02-04  Mark Wielaard  <mjw@redhat.com>

	* NEWS: Add Beginner Guide.

2009-02-04  Mark Wielaard  <mjw@redhat.com>

	* NEWS: Mention SystemTap Tapset Reference Manual.

2009-02-03  Frank Ch. Eigler  <fche@elastic.org>

	PR6961/9810.
	* tapsets.cxx (common_probe_entryfn_prologue): Revert.
	* translate.cxx (emit_common_header): Revert.

2009-02-03  Dave Brolley  <brolley@redhat.com>

	* NEWS: Update status of client/server.
	* stap-server.8.in: Add description of client/server certificate
	management and tools.
	* stap-server (initialization): Ensure that all server response
	files are created.
	(check_request): Parse the client's command line here.
	(check_comnpatibility): Don't require client/server platform match
	for phases 1-4.
	(fatal,error): Correct quoting typos.
	stap-server.8.in: Add SSL information.