@@ -1,5 +1,12 @@
 2009-02-05  Josh Stone  <jistone@redhat.com>
 
+	* tapsets.cxx (var_expanding_copy_visitor): This struct becomes
+	var_expanding_visitor and inherits from update_visitor instead of
+	deep_copy_visitor.  Each of the probe-type variants of this are also no
+	longer copiers.
+
+2009-02-05  Josh Stone  <jistone@redhat.com>
+
 	* staptree.h (update_visitor): A new visitor to make it easier to
 	rewrite parts of a probe or function without making a full copy.
 	* staptree.cxx (update_visitor::*): Each child is recursed with a
